# mega-cap

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  COMMANDS.md  DATABASE.md  PRD.md  PROJECT_PLAN.md  README.md  pyproject.toml
.claude/agents/: council-analyst.md  council-philosopher.md  council-quant.md  council-skeptic.md  review-data-scientist.md  review-devils-advocate.md  review-quant-pm.md  review-retail-investor.md  review-risk-manager.md  review-ux-designer.md
.claude/skills/council/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/review-page/: SKILL.md
.claude/skills/scans/: SKILL.md
.claude/skills/status/: SKILL.md
config/: config.yaml
deploy/: com.stockpulse.dashboard.plist  com.stockpulse.scheduler.plist  stockpulse-dashboard.service  stockpulse.service  supervisord.conf
docs/: DEPLOYMENT.md  SENTIMENT_REVIEW.md
src/stockpulse/: __init__.py  __main__.py  main.py  scheduler.py
src/stockpulse/alerts/: __init__.py  alert_manager.py  email_sender.py
src/stockpulse/dashboard/: __init__.py  app.py  charts.py
src/stockpulse/data/: __init__.py  database.py  fmp_data.py  ingestion.py  sentiment.py  universe.py
src/stockpulse/scanner/: __init__.py  ai_pulse.py  council.py  long_term_backtest.py  long_term_scanner.py
src/stockpulse/strategies/: __init__.py  backtest.py  base.py  bollinger_squeeze.py  gap_fade.py  macd_volume.py  momentum_breakout.py  optimizer.py  position_manager.py  rsi_mean_reversion.py  sector_rotation.py  signal_generator.py  signal_insights.py  (+2 more)
tasks/: lessons.md  todo.md
(+7 files in other folders)
